# Vectify

./: README.md
Backend/: .gitignore  main.py  requirements.txt
Backend/RealESRGAN/: model.py
Experiments/Rust-Vectorizer/: Cargo.toml  main.rs
Experiments/Vectorizer and optimizer/: .gitignore
Experiments/Vectorizer and optimizer/raster_to_svg/: convert.py  test.py
Experiments/Vectorizer and optimizer/svg_enhancer/: enhance.py
Experiments/Vectorizer and optimizer/svgo/: package-lock.json  package.json  test.mjs
Notebooks/Real-ESGRN/: try-real-esgrn model.ipynb
Notebooks/Yolo Model train with Logo-3k dataset/: LogoDet_3k_train_with_yolo.ipynb  dataset_to_yolo_format_script.py  ultralytics-yolo-try-obj-det.ipynb
Notebooks/Yolo Model train with trademark logo dataset/: dataset link.txt  model training+ detect.ipynb
